--- a/home/index.html
+++ b/home/index.html
@@ -13,7 +13,7 @@
         <nav>
             <div class = "navbarContainer">
                 <div class="logo">
-                    <a href="/"><img src="images/logo.png"></a>
+                    <a href="https://bathinjan.github.io/home/"><img src="images/logo.png"></a>
                 </div>
                 <div class="navLinks">
                     <ul>
