added Dad Joke Generator page

--- a/home/index.html
+++ b/home/index.html
@@ -18,7 +18,7 @@
                 <div class="navLinks">
                     <ul>
                         <li><a href="#" class = "navbarLinks">About Me</a></li>
-                        <li><a href="#" class = "navbarLinks">Resume</a></li>
+                        <li><a href="#" class = "navbarLinks">Projects</a></li>
                         <li><a href="#" class = "navbarLinks">Art Portfolio</a></li>
                         <li><a href="#" class = "navbarLinks">Contact</a></li>
                     </ul>
@@ -56,9 +56,9 @@
                         <input type = "radio" name = "accordion" id = "third">
                         <label for = "third">Programmer</label>
                         <div class = "content">
-                            <div><a class = "contentLinks" href="https://github.com/Bathinjan/Basic-Unity-Finite-State-Machine">Unity C#: Basic Finite State Machine</a></div>
-                            <div><a class = "contentLinks" href="https://github.com/Bathinjan/Simulation_Model-Communications-Network">Java: Simulation of Model Communications Network</a></div>
-                            <div><a class = "contentLinks" href="https://github.com/Bathinjan/Twitch_Bot_BathyBot">Python: Basic Twitch Bot</a></div>
+                            <div><a class = "contentLinks" href="https://github.com/Bathinjan/Basic-Unity-Finite-State-Machine" target = "_blank">Unity C#: Basic Finite State Machine</a></div>
+                            <div><a class = "contentLinks" href="https://github.com/Bathinjan/Simulation_Model-Communications-Network" target = "_blank">Java: Simulation of Model Communications Network</a></div>
+                            <div><a class = "contentLinks" href="https://github.com/Bathinjan/Twitch_Bot_BathyBot" target = "_blank">Python: Basic Twitch Bot</a></div>
                         </div>
                     </li>
                     <li class = "bioList">
