--- a/dadjokegenerator/index.html
+++ b/dadjokegenerator/index.html
@@ -11,7 +11,7 @@
             margin: 5%;
         }
     </style>
-    <title>Website Title</title>
+    <title>Dad Joke Generator</title>
 </head>
 <body>
     <h1 class = "header-text">Let's Get a Dad Joke</h1>
