--- a/home/index.html
+++ b/home/index.html
@@ -1,79 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <!-- <link rel="icon" type="image/png" href="/bath.png" /> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bathinjan</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
-</head>
-
-<body>
-    <div class="main">
-        <nav>
-            <div class = "navbarContainer">
-                <div class="logo">
-                    <a href="https://bathinjan.github.io/home/"><img src="images/logo.png"></a>
-                </div>
-                <div class="navLinks">
-                    <ul>
-                        <li><a href="#" class = "navbarLinks">About Me</a></li>
-                        <li><a href="#" class = "navbarLinks">Projects</a></li>
-                        <li><a href="#" class = "navbarLinks">Art Portfolio</a></li>
-                        <li><a href="#" class = "navbarLinks">Contact</a></li>
-                    </ul>
-                </div>
-            </div>
-            <hr>
-        </nav>
-        <main>
-            <div class = "bio">
-                <h1 class = "bathIntroHeader">Bathinjan</h1>
-                <h2 class = "bathIntroHeader" id = "introH2">is a:</h2>
-                <ul class = "accordion">
-                    <li class = "bioList">
-                        <input type = "radio" name = "accordion" id = "first" checked>
-                        <label for = "first">Solo Game Developer</label>
-                        <div class = "content">
-                            <a class = "contentLinks" href="https://youtu.be/89ktAwvsXRo" target = "_blank">Dance Dance Revolution: Euphoric Break</a><br>
-                            <a class = "contentLinks" href="https://youtu.be/vnMh6FZe1i4" target = "_blank">Barry's House</a><br>
-                            <a class = "contentLinks" href="https://youtu.be/s-k8tmcSjSY" target = "_blank">L3B LAB</a>
-                        </div>
-                    </li>
-                    <li class = "bioList">
-                        <input type = "radio" name = "accordion" id = "second">
-                        <label for = "second">3D & Pixel Artist</label>
-                        <div class = "content">
-                            <div class = "gridWrapper">
-                                    <div class="sketchfab-embed-wrapper"><iframe title="Rootin Tootin Crab" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/b86eea01674d40d494a95400c40acafe/embed"> </iframe> <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"></p></div>
-                                    <div class="sketchfab-embed-wrapper"> <iframe title="Boom Box" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/0c4b00a25cd24f2ca83b5045009026dd/embed"> </iframe> <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"></p></div>
-                                    <iframe src="https://player.vimeo.com/video/725855000?h=5cc5ee3b5a" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen quality = "540p"></iframe>
-                                    <iframe src="https://player.vimeo.com/video/725851900?h=c143b10acc" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-                            </div>
-                        </div>
-                    </li>
-                    <li class = "bioList">
-                        <input type = "radio" name = "accordion" id = "third">
-                        <label for = "third">Programmer</label>
-                        <div class = "content">
-                            <div><a class = "contentLinks" href="https://github.com/Bathinjan/Basic-Unity-Finite-State-Machine" target = "_blank">Unity C#: Basic Finite State Machine</a></div>
-                            <div><a class = "contentLinks" href="https://github.com/Bathinjan/Simulation_Model-Communications-Network" target = "_blank">Java: Simulation of Model Communications Network</a></div>
-                            <div><a class = "contentLinks" href="https://github.com/Bathinjan/Twitch_Bot_BathyBot" target = "_blank">Python: Basic Twitch Bot</a></div>
-                        </div>
-                    </li>
-                    <li class = "bioList">
-                        <input type = "radio" name = "accordion" id = "fourth">
-                        <label for = "fourth">Musician</label>
-                        <div class = "content">
-                            <iframe width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1285213015&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"></div>
-                            <iframe width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1152312190&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"></div>
-                            <iframe width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1132291039&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"></div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </main>
-    </div>    
-</body>
-
+  </head>
+  <body>
+    <div id="root"></div>
+    <noscript>Please enable Javascript to view this webpage</noscript>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
